js262/test/language/module-code/parse-err-decl-pos-export-for-in-lhs.js


/*---
description: Statement cannot contain an `export` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

for (y in [])
  export default null;
